@@ -1,7 +1,5 @@
 # awesome-coroutine
-协程多语言DEMO实现
-
-python3.7.4
+协程多语言DEMO
 
 ## Python
 在 python3.4 之前，使用三方库实现，比如：
@@ -21,7 +19,7 @@ python3.7.4
 
 Go 语言，从语言层面天生支持并发，可以说是为并发而生的语言。
 用法相比于python来说，更为简洁方便
-```golang
+```go
 // 执行一个函数
 func()
 // 开启一个协程执行这个函数
@@ -29,8 +27,39 @@ go func()
 ```
 
 
+## Java
+
+java19引入了<b>虚拟线程</b>（Virtual Thread），终于支持协程了。
+
+新API：
+* Thread.ofVirtual()：虚拟线程，也就是协程
+* Thread.ofPlatform()：平台线程，也就是我们现在常用的线程
+
+```java
+// Thread.getId() from jdk19 abandoned
+Runnable runnable = () -> System.out.println(Thread.currentThread().threadId());
+Thread thread = Thread.ofVirtual().name("testVT").unstarted(runnable);
+Thread testPT = Thread.ofPlatform().name("testPT").unstarted(runnable);
+testPT.start();
+```
+
+快速创建和启动虚拟线程：
+```java
+Runnable runnable = () -> System.out.println(Thread.currentThread().threadId());
+Thread thread = Thread.startVirtualThread(runnable);
+```
+
+`Executors.newVirtualThreadPerTaskExecutor()` 虚拟线程池：
+```java
+try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
+  executor.submit(() -> System.out.println("hello"));
+}
+```
+
+> 因为虚拟线程是预览特性，需要用 `javac --release 19 --enable-preview Main.java` 编译程序，再用 `java --enable-preview Main` 运行程序
+> 或者使用`java --source 19 --enable-preview Main.java`运行程序
 
 
-
-
-参考：http://static.kancloud.cn/gofor/golang-learn/2120519
+参考：
+* http://static.kancloud.cn/gofor/golang-learn/2120519
+* https://medium.com/javarevisited/how-to-use-java-19-virtual-threads-c16a32bad5f7
